Added about me section

--- a/Index.html
+++ b/Index.html
@@ -5,16 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My.Portfolio</title>
+    <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+    <img src="title2.png" class="titlelogo"> 
     <nav>
         <ul>
-            <li> Home</li>
-            <li> About</li>
-            <li>Blog</li>
-            <li>Contact</li>
+            <li a class="active" href="#home"> Home</li>
+            <li a class="" href="#about"> About</li>
+            <li a class="" href="#blog"> Blog</li>
+            <li a class="" href="#contact"> Contact</li>
         </ul>
     </nav>
     <h1>JOHN'S PORTFOLIO </h1>
+    <p>Hello Welcome to my page, am John amd i'm passionate about tech.
+    </p>
+    <div class="about">
+        <p class="abouts">College Student
+            MIS major recently graduated and looking to use my knowledge and development skills to contribute to the society. My eagerness to learn and motivated attitude is reflected in my previous work and experience with finding leads. I hope to leverage my background in writing to pursue news journalism and spread new ideas. 
+            
+            Freelancer
+           Ameture freelancer, looking to advance my skills by developing new projects. As a webdesigner, I hope to help small companies and individuals grow their businesses while also building a strong portfolio of designs for myself. 
+            
+           Hobbies
+           I play winger or attacking mid-position in soccer. I also enjoy swimming, playing fifa and travelling.</p>
+    </div>
+
 </body>
 </html>
